# basic-flask

./: guess_number.py  hello.py  pyproject.toml
Updated-Blog/: main.py
Updated-Blog/templates/: footer.html  header.html  index.html
blog/: main.py
personal_site/: server.py
personal_site/templates/: agapito_cv.html  index.html
